--- a/accounts/templates/registration/password_reset_sent.html
+++ b/accounts/templates/registration/password_reset_sent.html
@@ -4,7 +4,7 @@
 {% block content %}
 <br><br><br><br>
 
-<h1  style="text-align: center;font-size: xx-large;padding:6px 6px 10px 6px;font-size: xlarger;font-weight: bold;  color: black;">Password reset sent</h1>><br>
+<h1  style="text-align: center;font-size: xx-large;padding:6px 6px 10px 6px;font-size: xlarger;font-weight: bold;  color: black;">Password reset sent</h1><br>
 
 <hr>
 <p>We've emailed instructions for setting your password, 
