--- a/main/templates/blog/post_list.html
+++ b/main/templates/blog/post_list.html
@@ -32,7 +32,7 @@
 <div id="changing" class="jumbotron" >
   <div class="container">
     <h1 style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif;width: 100%;" id="welcome" class="">Welcome</h1>
-    <p style="font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;">News, Entertainment, Health, Sports, Facts, Science and yes... Technology!</p>
+    <p style="font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;font-size: larger;">News, Entertainment, Health, Sports, Facts, Science and yes... Technology!</p>
   </div>
 </div>
 <br>
