--- a/main/templates/blog/post_detail.html
+++ b/main/templates/blog/post_detail.html
@@ -18,7 +18,7 @@
 <div class="">
 <h1 class="title" style="font-size: larger;font-weight: bold; color: black;font-family: Arial, Helvetica, sans-serif, 'Times New Roman', Times, serif;">{{ post.title }}</h1>
 
-    <p>Posted by <strong style="color: blue;font-weight: bold;">9jaBased</strong></p>
+    <p>By <strong style="color: blue;font-weight: bold;">9jaBased</strong></p>
     {% if post.published_date %}
         <div class="date postdate"></div>
             <p>Published on <span style="color: blue;font-weight: bold;">{{ post.published_date }}</span></p>
